--- a/src/app/pages/sudamericana/pais/pais.component.html
+++ b/src/app/pages/sudamericana/pais/pais.component.html
@@ -4,7 +4,28 @@
   </nb-card-header>
 
   <nb-card-body>
-    <ng2-smart-table [settings]="settings" >
-    </ng2-smart-table>
+    <form novalidate [formGroup]="paisForm" (ngSubmit)="onSubmit()">
+      <div class="form-group row">
+        <input matInput formControlName="Nombre" class="form-control" placeholder="Nombre" type="text" required></div>
+      <div class="form-group row">
+        <button type="submit"  [disabled]="actualizando" [hidden]="actualizando" class="btn btn-primary">Agregar</button></div>
+      
+        <button (click)="onUpdate()" [hidden]="!actualizando" 
+        [disabled]="!actualizando"  
+        class="btn btn-primary">Actualizar</button>
+    </form>
+   
+  <table class="table">
+    <tr><th>ID</th><th>Nombre</th></tr>
+    
+    <tr *ngFor="let fpais of paises">
+      <td>{{fpais.Id}}</td>
+      <td>{{fpais.Nombre}}</td>
+      <td><button class="btn btn-primary" (click)='onDelete(fpais)'
+        >Borrar</button></td>
+      <td><button class="btn btn-primary" (click)='onSelect(fpais)'
+          >Seleccionar</button></td>   
+    </tr>
+  </table>
   </nb-card-body>
 </nb-card>
